Ensure "-" is used to filter all courses in a major

--- a/app/templates/browse.html
+++ b/app/templates/browse.html
@@ -125,7 +125,7 @@ table {
     $('#class-filter').change(function(data) {
         var value = $(this).val();
         $('tbody').html(renderTable(currentCourses.filter(function(course) {
-          return course.COURSE === value;
+          return course.COURSE === value || value === '-';
         })));
     });
 
