Create about page

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -9,9 +9,59 @@
 {% endblock %}
 
 {% block content %}
-About
 
+<div class="content">
+
+  <div class="header">
+    <h1>About Us</h1>
+  </div>
+
+  <div class="content">
+    <div class="pure-g">
+        <div class="pure-u-1-3">
+            <h3>GitHub: <a href="https://github.com/theMagicalKarp/ill-rhinos/">ill-rhinos</a></h3>
+        </div>
+        <div class="pure-u-1-3">
+            <h3>Project Purposal: <a href="https://docs.google.com/document/d/1_-TY-G0O6iYRYm9pcbB8OMCQDrN6dAOUJnqkQlEXEYU/pub">doc</a>
+        </div>
+        <div class="pure-u-1-3">
+            <h3>Project Report: <a href="https://docs.google.com/document/d/1JNl4HE6-KdR4Y0dI9ehz6jgbAxwEkh4TLDWE_jw7kl0/pub">doc</a>
+        </div>
+
+        <div class="pure-u-1-5">
+            <img src="https://graph.facebook.com/TravisJamesReed/picture">
+        </div>
+        <div class="pure-u-4-5">
+            <p>Travis Reed <span class="muted">Project Manager</span></p>
+        </div>
+
+        <div class="pure-u-1-5">
+            <img src="https://graph.facebook.com/AlyssaAnnB/picture">
+        </div>
+        <div class="pure-u-4-5">
+            <p>Alyssa Barnes <span class="muted">Architect</span></p>
+        </div>
+
+        <div class="pure-u-1-5">
+            <img src="https://graph.facebook.com/robert.sheehy/picture">
+        </div>
+        <div class="pure-u-4-5">
+            <p>Robert Sheehy <span class="muted">Systems Engineer</span></p>
+        </div>
+
+        <div class="pure-u-1-5">
+            <img src="https://graph.facebook.com/dwielinski/picture">
+        </div>
+        <div class="pure-u-4-5">
+            <p>David Wielinski <span class="muted">Tester/Integrator</span></p>
+        </div>
+
+    </div>
+  </div>
+</div>
 {% endblock %}
 
 
-{% block js %}{% endblock %}
+{% block js %}
+
+{% endblock %}
