--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,6 +13,41 @@
     #nprogress .bar {
       z-index: 5000;
     }
+
+    .pure-button {
+        border-radius: 4px;
+        text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+    }
+
+    .button-success,
+    .button-error,
+    .button-warning,
+    .button-secondary {
+        color: white;
+        border-radius: 4px;
+        text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+    }
+
+    .button-success {
+        background: rgb(28, 184, 65); /* this is a green */
+    }
+
+    .button-error {
+        background: rgb(202, 60, 60); /* this is a maroon */
+    }
+
+    .button-warning {
+        background: rgb(223, 117, 20); /* this is an orange */
+    }
+
+    .button-secondary {
+        background: rgb(66, 184, 221); /* this is a light blue */
+    }
+
+    .muted {
+      color: #999;
+      font-size: 14px;
+    }
   </style>
   {% block css %}{% endblock %}
 </head>
