--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -22,7 +22,7 @@
             <h3>GitHub: <a href="https://github.com/theMagicalKarp/ill-rhinos/">ill-rhinos</a></h3>
         </div>
         <div class="pure-u-1-3">
-            <h3>Project Purposal: <a href="https://docs.google.com/document/d/1_-TY-G0O6iYRYm9pcbB8OMCQDrN6dAOUJnqkQlEXEYU/pub">doc</a>
+            <h3>Project Proposal: <a href="https://docs.google.com/document/d/1_-TY-G0O6iYRYm9pcbB8OMCQDrN6dAOUJnqkQlEXEYU/pub">doc</a>
         </div>
         <div class="pure-u-1-3">
             <h3>Project Report: <a href="https://docs.google.com/document/d/1JNl4HE6-KdR4Y0dI9ehz6jgbAxwEkh4TLDWE_jw7kl0/pub">doc</a>
